src/test/deca/context/valid/created/decl_class/field_avant_decl.deca
// Description :
//		on fait un appel a un field avant sa declaration
//
// Resultats :
//		Ok


class A{
	
	int met(){
	return x;
	}
	int x;
}
