src/test/deca/context/invalid/created/acces_field/acces_sur_void.deca
// Description :
//    acces à un field sur un void (qui n'est pas une classe)
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.65) Le membre gauche n’est pas de type ‘classe’


class A {
void met(){
}
}
{
A a = new A();
(a.met()).x;
}